# MakeyMakey

./: .gitignore  1433.conf  README.md  fft_live.py  fft_live2.py  fft_live_testing.py  fft_recorded.py  fft_viz.py  iq_viz.py  main.py  pyproject.toml  radar.py  radar_config.py  record.py  record_csv.py  svm_data.joblib  svm_model.joblib  svm_plots.py  svm_test.py  test.ipynb  test.py  vibration_intensity.py  vibration_intensity2.py  vibration_intensity_recorded.py  vibration_live_testing.py  vibration_testing.py  vibration_testing_ai.py  vibration_testing_new.py
.ipynb_checkpoints/: test-checkpoint.ipynb
data/: 10s_stat_20s_million_10s_stat.csv  always_off.csv  always_on.csv  othermill_off.npz  othermill_on.npz  radar_data_20250510_211822.csv  radar_data_20250510_211925.csv  radar_data_20250510_230012.csv  richard_walking.npz  spaced_test.csv
docs/: DATA.md  FLASHING.md  LUA_API.md  README.md  THOUGHTS.md
scripts/: 1443_mmwavestudio_config.lua  1443_mmwavestudio_config_old.lua
src/: dca1000.py  distance_plot.py  doppler_plot.py  dsp.py  frame_buffer.py  iq_plot.py  radar.py  radar_cli.py  radar_config.py  radar_pub.py  vibration_intensity_plot.py
tests/: doppler_vibration.py  fft_viz.py  hail_mary.py  iq_viz.py  record.py  vibration_intensity.py  vibration_intensity2.py
training/: exp1_always_on_person_working_at_machine_bystander_behind.npy  exp2_4m_far_on_lots_lots_of_people.npy  exp2_always_off_person_working_at_machine_persons_on_other_tables.npy  exp2_always_off_persons_on_other_tables_2m_4m.npy  exp2_always_on_persons_on_other_tables_2m.npy  (+5 more)
(+9 files in other folders)
