[project]
name = "makeymakey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.6"
dependencies = [
    "dash>=3.0.4",
    "matplotlib>=3.10.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pyqtgraph>=0.13.7",
    "pyserial>=3.5",
    "scikit-learn>=1.6.1",
]
